added post category handler